--- a/auth/package.json
+++ b/auth/package.json
@@ -20,25 +20,25 @@
   "license": "ISC",
   "dependencies": {
     "@sgtickets/common": "^1.0.9",
-    "@types/cookie-session": "^2.0.39",
-    "@types/express": "^4.17.3",
-    "@types/jsonwebtoken": "^8.3.8",
-    "@types/mongoose": "^5.7.8",
+    "@types/cookie-session": "^2.0.43",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongoose": "^5.11.97",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.4.0",
+    "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "5.11.15",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "mongoose": "6.0.12",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/supertest": "^2.0.8",
-    "jest": "^25.2.7",
-    "mongodb-memory-server": "^6.5.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^25.3.1"
+    "@types/jest": "^27.0.2",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.3.1",
+    "mongodb-memory-server": "^8.0.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7"
   }
 }
