--- a/expiration/package.json
+++ b/expiration/package.json
@@ -19,15 +19,15 @@
   "license": "ISC",
   "dependencies": {
     "@sgtickets/common": "^1.0.23",
-    "@types/bull": "^3.12.2",
-    "bull": "^3.13.0",
-    "node-nats-streaming": "^0.2.6",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "@types/bull": "^3.15.5",
+    "bull": "^4.1.0",
+    "node-nats-streaming": "^0.3.2",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "jest": "^25.2.7",
-    "ts-jest": "^25.3.1"
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7"
   }
 }
